# esolangs

./: .gitignore  Cargo.toml  README.md
docs/: index.md
docs/el-comodo/: index.md
docs/gridrun/: index.md
docs/sunarch/: index.md
docs/sunarch/el-montaje/: index.md
docs/sunarch/gridrun/ideas/: concepts.md  general.md  index.md  instructions.md
libs/: makefile-common.mk
libs/src/: common.h  util-debug.c  util-debug.h  util-math.c  util-math.h
src/: lib.rs
src/esolangs/: mod.rs
src/esolangs/el_montaje/: mod.rs
src/esolangs/el_montaje/common/: instructions.rs  mod.rs  reader.rs
src/esolangs/el_montaje/components/: memory.rs  mod.rs  processor_state.rs  register.rs
src/esolangs/el_montaje/tags/: instruction_keyword.rs  mod.rs  register_reference.rs  value_literal.rs
src/esolangs/el_montaje/tools/: mod.rs  number.rs
src/esolangs/gridrun/: mod.rs
sunarch/el-montaje/: makefile
sunarch/el-montaje/src/: component-memory.c  component-memory.h  component-proc-state.c  component-register.c  component-registers.c  component-registers.h  el-montaje.c  el_montaje.rs  instructions.c  instructions.h  reader.c  reader.h  tag-instr-keyword.c  tag-register-ref.c  tools-number.c  tools-number.h  version.h  version.rs
sunarch/el-montaje/src/common/: instructions.rs  reader.rs
sunarch/el-montaje/src/components/: memory.rs  processor_state.rs  register.rs
sunarch/el-montaje/src/tags/: instruction_keyword.rs  register_reference.rs
sunarch/el-montaje/src/tools/: number.rs
sunarch/gridrun/: .gitignore  makefile
sunarch/gridrun/src/: gridrun.c  gridrun.rs  version.h  version.rs
